--- a/content/members/2014/kryaoi/index.adoc
+++ b/content/members/2014/kryaoi/index.adoc
@@ -10,8 +10,8 @@ bio:
   'aikatsu': 'アイカツ！が好きです。'
 ---
 
-アイカツ！と関数型プログラミングが生きがい。
-よく書く言語はScalaで、HaskellやPythonなども嗜む。
-どちらかと言えばバックエンド寄りのことが好き。
-アイカツ！の中で一番思い入れがあるキャラは夏樹みくるさん。
+アイカツ！と関数型プログラミングが生きがい。 +
+よく書く言語はScalaで、HaskellやPythonなども嗜む。 +
+どちらかと言えばバックエンド寄りのことが好き。 +
+アイカツ！の中で一番思い入れがあるキャラは夏樹みくるさん。 +
 アイカツスターズ！もちゃんと見ていますよ。
